--- a/Easypost/Easypost.csproj
+++ b/Easypost/Easypost.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{A6947B9D-D1B2-4F9D-A7B3-05731E76A547}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Easypost</RootNamespace>
-    <AssemblyName>Easypost</AssemblyName>
+    <RootNamespace>EasyPost</RootNamespace>
+    <AssemblyName>EasyPost</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile88</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -25,6 +25,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\EasyPost.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -33,6 +34,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\EasyPost.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
@@ -40,10 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Address.cs" />
-    <Compile Include="BuyPostageLabelResponse.cs" />
+    <Compile Include="Internal\BuyPostageLabelResponse.cs" />
     <Compile Include="CarrierRate.cs" />
-    <Compile Include="CollectionBuilder.cs" />
-    <Compile Include="CollectionExtensions.cs" />
+    <Compile Include="Internal\CollectionBuilder.cs" />
+    <Compile Include="Internal\CollectionExtensions.cs" />
     <Compile Include="CustomsInfo.cs" />
     <Compile Include="CustomsItem.cs" />
     <Compile Include="ParcelType.cs" />
@@ -55,8 +57,8 @@
     <Compile Include="VerifyAddressResponse.cs" />
     <Compile Include="EasyPostBase.cs" />
     <Compile Include="PostageLabel.cs" />
-    <Compile Include="ShipmentRatesResponse.cs" />
-    <Compile Include="IEncodable.cs" />
+    <Compile Include="Internal\ShipmentRatesResponse.cs" />
+    <Compile Include="Internal\IEncodable.cs" />
     <Compile Include="Parcel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReponseBase.cs" />
