--- a/EasyPost/EasyPost.csproj
+++ b/EasyPost/EasyPost.csproj
@@ -25,7 +25,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\EasyPost.xml</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -41,27 +42,27 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Address.cs" />
+    <Compile Include="IEasyPostClient.cs" />
+    <Compile Include="Model\Address.cs" />
     <Compile Include="Internal\BuyPostageLabelResponse.cs" />
-    <Compile Include="CarrierRate.cs" />
+    <Compile Include="Model\CarrierRate.cs" />
     <Compile Include="Internal\CollectionBuilder.cs" />
     <Compile Include="Internal\CollectionExtensions.cs" />
-    <Compile Include="CustomsInfo.cs" />
-    <Compile Include="CustomsItem.cs" />
-    <Compile Include="ParcelType.cs" />
-    <Compile Include="RefundRequest.cs" />
-    <Compile Include="Refund.cs" />
+    <Compile Include="Model\CustomsInfo.cs" />
+    <Compile Include="Model\CustomsItem.cs" />
+    <Compile Include="Model\ParcelType.cs" />
+    <Compile Include="Model\RefundRequest.cs" />
+    <Compile Include="Model\Refund.cs" />
     <Compile Include="EasyPostClient.cs" />
-    <Compile Include="ScanForm.cs" />
-    <Compile Include="Shipment.cs" />
-    <Compile Include="VerifyAddressResponse.cs" />
-    <Compile Include="EasyPostBase.cs" />
-    <Compile Include="PostageLabel.cs" />
+    <Compile Include="Model\ScanForm.cs" />
+    <Compile Include="Model\Shipment.cs" />
+    <Compile Include="Model\VerifiedAddress.cs" />
+    <Compile Include="Model\EasyPostBase.cs" />
+    <Compile Include="Model\PostageLabel.cs" />
     <Compile Include="Internal\ShipmentRatesResponse.cs" />
     <Compile Include="Internal\IEncodable.cs" />
-    <Compile Include="Parcel.cs" />
+    <Compile Include="Model\Parcel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReponseBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
@@ -86,6 +87,7 @@
       <HintPath>..\packages\Microsoft.Bcl.1.1.3\lib\portable-net40+sl4+win8+wp71\System.Threading.Tasks.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.8\tools\Microsoft.Bcl.Build.targets" />
