add test for buying label and insurance

--- a/EasyPost/EasyPost.csproj
+++ b/EasyPost/EasyPost.csproj
@@ -46,13 +46,15 @@
     <Compile Include="Model\Address.cs" />
     <Compile Include="Internal\BuyPostageLabelResponse.cs" />
     <Compile Include="Model\Batch.cs" />
-    <Compile Include="Model\BatchLabel.cs" />
+    <Compile Include="Internal\BatchLabel.cs" />
+    <Compile Include="Model\BatchShipment.cs" />
+    <Compile Include="Model\BatchStatus.cs" />
     <Compile Include="Model\CarrierRate.cs" />
     <Compile Include="Internal\CollectionBuilder.cs" />
     <Compile Include="Internal\CollectionExtensions.cs" />
     <Compile Include="Model\CustomsInfo.cs" />
     <Compile Include="Model\CustomsItem.cs" />
-    <Compile Include="Model\Insurance.cs" />
+    <Compile Include="Internal\Insurance.cs" />
     <Compile Include="Model\RefundRequest.cs" />
     <Compile Include="Model\Refund.cs" />
     <Compile Include="EasyPostClient.cs" />
