--- a/EasyPost.Api/EasyPost.Api.csproj
+++ b/EasyPost.Api/EasyPost.Api.csproj
@@ -60,7 +60,9 @@
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
     <None Include="EasyPost.Api.nuspec" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IEasyPostClient.cs" />
