add gitignore to solution so its easy to edit

--- a/EasyPost.Api/EasyPost.Api.csproj
+++ b/EasyPost.Api/EasyPost.Api.csproj
@@ -59,7 +59,9 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
-    <None Include="EasyPost.Api.nuspec" />
+    <None Include="EasyPost.Api.nuspec">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
